Pequena alteração do HTML e criação de um CSS com modificações!

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumindo API com Fetch</title>
+
+    <!-- Chamada Google fonts! -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Chamada CSS! -->
+     <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 <body>
-    <button id="meuBotao">Clique para buscar dados</button>
-    <div id="resultado"></div>
+
+    <!-- <h1>Consumindo API com Fetch!</h1> -->
+    <div class="secao">
+        <button id="meuBotao">Clique para buscar dados!</button>
+        <div id="resultado"></div>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
 </html>
+
+
