Inserção de um JS para fazer o resultado aparecer e reaparecer com um clique do botão (incompleto)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <!-- <h1>Consumindo API com Fetch!</h1> -->
     <div class="secao">
-        <button id="meuBotao">Clique para buscar dados!</button>
+        <button id="meuBotao" onclick="fecharBusca()" >Clique para buscar dados!</button>
         <div id="resultado"></div>
+        <!-- <button id="botao2">Mostrar/Ocultar resultado!</button> -->
     </div>
 
     <script src="./js/main.js"></script>
