--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- <h1>Consumindo API com Fetch!</h1> -->
     <div class="secao">
-        <button id="meuBotao">Clique para buscar dados!</button>
+        <button id="meuBotao" onclick="fecharDiv()" >Clique para buscar dados!</button>
         <div id="resultado"></div>
     </div>
 
