--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumindo API com Fetch</title>
 
-    <!-- Chamada Google fonts! -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- Chamada CSS! -->
+
      <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 <body>
 
-    <!-- <h1>Consumindo API com Fetch!</h1> -->
     <div class="secao">
-        <button id="meuBotao" onclick="fecharDiv()" >Clique para buscar dados!</button>
+        <button id="meuBotao" >Clique para buscar dados! (Clique novamente para deixar de mostrar)</button>
         <div id="resultado"></div>
     </div>
 
