--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consumindo API com Fetch</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-
-     <link rel="stylesheet" href="./css/styles.css">
-
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <div class="secao">
-        <button id="meuBotao" >Clique para buscar dados! (Clique novamente para deixar de mostrar)</button>
-        <div id="resultado"></div>
+      <button id="meuBotao">
+        Clique para buscar dados! (Clique novamente para deixar de mostrar)
+      </button>
+      <div id="resultado"></div>
     </div>
 
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
-
-
